--- a/css/index.css
+++ b/css/index.css
@@ -1,77 +1,167 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+}
+
+.mobile_btn {
+    display: none;
 }
 
 .inner-container {
-    width: 100%;
-    max-width: 1240px;
-    margin-right: auto;
-    margin-left: auto;
+  width: 100%;
+  max-width: 1240px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .hero__section {
-    width: 100%;
-    height: 740px;
-   background-image: url("https://s3-alpha-sig.figma.com/img/f0dc/5461/b503eecb5af697457bcd32cf7e54a3fd?Expires=1663545600&Signature=Uiasdtorszk3WgajPewAzf~o06axLR6XdkJmwGEIZDtFw6I2ACkY1a4ZRaxoI5dB9I95F-d0ul2XHIZCxj69mtDTyGowor-KV~C~e~70tTru5uTFgoApAu4mZOn2FYrXfWCmVGcrHKtjPuhz7vU9u51Rjxz6j7aQX1SVxTeKua1TuWOJFP~1syYDUQimE8LFpdf8d7bExZ~iK19i0yXHea8hBwqEFbP6jPIjROSik8DXg~FIVocCG5XJzTsSTtr1dStB3aA50zAfyDxBDE3MpUcOnW7fDS4oSuCGD1OsLGgMN6lzFQWs0T0LU-2IpyAQ66~nfDfhzyRLgHaftgvODg__&Key-Pair-Id=APKAINTVSUGEWH5XD5UA");
-   background-size: cover;
-   background-repeat: no-repeat;
-   background-position: center; 
-   position: relative;
+  width: 100%;
+  height: 740px;
+  background-image: url("https://res.cloudinary.com/dqw7jnfgo/image/upload/q_30/v1663064582/random%20profile/randomprofile-min.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: bottom;
+  position: relative;
+  padding: 0 20px;
 }
 
 .nav__list {
-    background-color: transparent;
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 26px;
-    padding-right: 92px;
-    padding-bottom: 26px;
+  background-color: transparent;
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 26px;
+  padding-right: 92px;
+  padding-bottom: 26px;
 }
 
 .nav__list-item {
-    font-family: 'Lato';
-    display: flex;
-    color: #A6A6A6;
-    margin-left: 30px;
+  font-family: "Lato";
+  display: flex;
+  color: #a6a6a6;
+  margin-left: 30px;
 }
 
-
 .nav__link {
-    color: currentColor;
-    line-height: 19px;
-    text-decoration: none;
-    font-size: 16px;
+  color: currentColor;
+  line-height: 19px;
+  text-decoration: none;
+  font-size: 16px;
 }
 
 .profile {
-    width: 100%;
-    max-width: 467px;
-    margin-top: calc(181px - 71px);
+  width: 100%;
+  padding-top: calc(181px - 71px);
+  max-width: 467px;
 }
 
 .name {
-    font-size: 48px;
-    line-height: 58px;
-    font-weight: 700;
-    font-family: "Lato";
-    margin-bottom: 24px;
-    color: #404040;
+  font-size: 48px;
+  line-height: 58px;
+  font-weight: 700;
+  font-family: "Lato";
+  margin-bottom: 24px;
 }
 
 .description {
-    font-size: 16px;
-    font-weight: 400;
-    font-family: "Lato";
-    line-height: 24px;
-    margin-bottom: 32px;
-    color: #404040;
+  font-size: 16px;
+  font-weight: 400;
+  font-family: "Lato";
+  line-height: 24px;
+  margin-bottom: 32px;
 }
 
 .btn {
-    padding: 26px 62px;
+  padding: 26px 62px;
+  background-color: transparent;
+  font-size: 18px;
+  line-height: 22px;
+}
+
+.icon_list {
+  position: absolute;
+  bottom: 55.59px;
+  right: 100px;
+}
+
+.icon_listitem {
+  display: flex;
+  font-size: 24px;
+}
+
+.icon_link {
+  color: #404040;
+}
+
+.icon_listitem + .icon_listitem {
+  margin-top: 29.5px;
+}
+
+
+.section_two-wrapper {
+    display: flex;
+    align-items: flex-start;
+    padding-top: 69px;
+}
+
+.image-wrapper {
+    width: 505px;
+    height: 636.78px;
+    flex-shrink: 0;
+    margin-right: 19.92px;
+}
+
+.image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (max-width: 768px) {
+  .nav__list {
+    display: none;
+  }
+
+  .icon_list {
+    display: none;
+  }
+
+  .profile {
+    position: absolute;
+    bottom: 40px;
+    color: white;
+    max-width: 284px;
+  }
+
+  .name {
+    font-size: 24px;
+    line-height: 29px;
+    margin-bottom: 16px;
+  }
+
+  .description {
+    font-size: 12px;
+    line-height: 18px;
+    margin-bottom: 14px;
+  }
+
+  .mobile_btn {
+    display: block;
     background-color: transparent;
-    color: #404040;
-    font-size: 18px;
-    line-height: 22px;
+    outline: none;
+    border: none;
+    padding-top: 37px
+  }
 }
