--- a/css/index.css
+++ b/css/index.css
@@ -165,3 +165,82 @@
     padding-top: 37px
   }
 }
+
+
+/* .animated__btn {
+  background-color: blue;
+  color: white;
+  border: 1px solid black;
+  padding: 16px;
+  cursor: pointer;
+  animation-name: gospel;
+  animation-duration: 5s;
+   backface-visibility: hidden; 
+  transition-property: color, width;
+  transition-duration: 5s, 8s;
+  transition-delay: 2s, 8s;
+  transition-timing-function: cubic-bezier(.82,.3,.47,1.18);
+  transition: all 2s  cubic-bezier(.82,.3,.47,1.18);
+} */
+
+/* .animated__btn:hover {
+  background-color: tomato;
+  color: black;
+  border-color: indigo;
+  transform: scale(2) rotate(-180deg);
+
+} */
+
+/* .animated__div {
+  height: 200px;
+  width: 200px;
+  position: absolute;
+  right: 0;
+  background-position: center;
+  background-size: contain;
+  background-color: cyan;
+  animation-name: damilola;
+  animation-duration: 5s;
+   animation-iteration-count: infinite; 
+  animation-direction: alternate-reverse; 
+  animation-fill-mode: none;
+
+} */
+
+/* @keyframes damilola {
+  0% {background-color: red; top: 0; right: 0;}
+  10% {background-color: red; top: 500px; right: 500px;}
+  100% { background-color: blue;}
+} */
+
+/* @keyframes gospel {
+  from { color: red }
+  to { color: green}
+} */
+
+
+
+.gallery {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+}
+
+
+
+.gallery_items {
+  width: 400px;
+  height: 516px;
+  flex-shrink: 0;
+}
+
+.gallery > .gallery_items:nth-child(-n + 3) {
+  margin-bottom: 40px
+}
+
+.galler_img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
